// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio[Base] should render correctly  1`] = `
<div
  class="cscg4k5 soui-radio-wrapper"
>
  <input
    style="display: none;"
    tabindex="0"
    type="radio"
  />
  <span
    class="c-dmr5xa soui-radio-indicator-wrapper"
  >
    <span
      class="co0ikgh soui-radio-indicator"
      tabindex="1"
    />
  </span>
  <span
    class="c-2q2qi9 soui-radio-desc"
  >
    Option
  </span>
</div>
`;

exports[`Radio[Base] should render correctly about block 1`] = `
<div
  class="c-ddd5kv soui-radio-group"
>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper ceg5x3m soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about button 1`] = `
<div
  class="c-ddd5kv soui-radio-group cja407n soui-radio-group-button c-p0rt2o soui-button-group"
>
  <button
    class="cscg4k5 soui-radio-wrapper cg2l11h soui-button-secondary c3ct0ht soui-button-button"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Monday
    </span>
  </button>
  <button
    class="cscg4k5 soui-radio-wrapper cg2l11h soui-button-secondary c3ct0ht soui-button-button"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Tuesday
    </span>
  </button>
  <button
    class="cscg4k5 soui-radio-wrapper ceg5x3m soui-radio-wrapper-checked cnsrtqr soui-button-primary c3ct0ht soui-button-button"
    type="button"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Wednesday
    </span>
  </button>
  <button
    class="cscg4k5 soui-radio-wrapper cg2l11h soui-button-secondary c3ct0ht soui-button-button"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Thursday
    </span>
  </button>
  <button
    class="cscg4k5 soui-radio-wrapper cg2l11h soui-button-secondary c3ct0ht soui-button-button"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Friday
    </span>
  </button>
  <button
    class="cscg4k5 soui-radio-wrapper cg2l11h soui-button-secondary c3ct0ht soui-button-button"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Saturday
    </span>
  </button>
  <button
    class="cscg4k5 soui-radio-wrapper cg2l11h soui-button-secondary c3ct0ht soui-button-button"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Sunday
    </span>
  </button>
</div>
`;

exports[`Radio[Base] should render correctly about button outline 1`] = `
<div
  class="c-ddd5kv soui-radio-group cja407n soui-radio-group-button c-p0rt2o soui-button-group"
>
  <button
    class="cscg4k5 soui-radio-wrapper cg2l11h soui-button-secondary c3ct0ht soui-button-button capjo2b soui-button-outline"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Monday
    </span>
  </button>
  <button
    class="cscg4k5 soui-radio-wrapper cg2l11h soui-button-secondary c3ct0ht soui-button-button capjo2b soui-button-outline"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Tuesday
    </span>
  </button>
  <button
    class="cscg4k5 soui-radio-wrapper ceg5x3m soui-radio-wrapper-checked cnsrtqr soui-button-primary c3ct0ht soui-button-button capjo2b soui-button-outline"
    type="button"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Wednesday
    </span>
  </button>
  <button
    class="cscg4k5 soui-radio-wrapper cg2l11h soui-button-secondary c3ct0ht soui-button-button capjo2b soui-button-outline"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Thursday
    </span>
  </button>
  <button
    class="cscg4k5 soui-radio-wrapper cg2l11h soui-button-secondary c3ct0ht soui-button-button capjo2b soui-button-outline"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Friday
    </span>
  </button>
  <button
    class="cscg4k5 soui-radio-wrapper cg2l11h soui-button-secondary c3ct0ht soui-button-button capjo2b soui-button-outline"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Saturday
    </span>
  </button>
  <button
    class="cscg4k5 soui-radio-wrapper cg2l11h soui-button-secondary c3ct0ht soui-button-button capjo2b soui-button-outline"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Sunday
    </span>
  </button>
</div>
`;

exports[`Radio[Base] should render correctly about cancel 1`] = `
<div
  class="c-ddd5kv soui-radio-group"
>
  <div
    class="cscg4k5 soui-radio-wrapper ceg5x3m soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about disabled 1`] = `
<div
  class="c-ddd5kv soui-radio-group"
>
  <div
    class="cscg4k5 soui-radio-wrapper cspeb5 soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper cspeb5 soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper cspeb5 soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper cspeb5 soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper cspeb5 soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper cspeb5 soui-radio-wrapper-disabled ceg5x3m soui-radio-wrapper-checked"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper cspeb5 soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about disabled func 1`] = `
<div
  class="c-ddd5kv soui-radio-group"
>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper cspeb5 soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper ceg5x3m soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about group 1`] = `
<div
  class="c-ddd5kv soui-radio-group"
>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper ceg5x3m soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about group children 1`] = `
<div
  class="c-ddd5kv soui-radio-group"
>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper ceg5x3m soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about size 1`] = `
<div>
  <div
    class="c-ddd5kv soui-radio-group cja407n soui-radio-group-button c-p0rt2o soui-button-group"
  >
    <button
      class="cscg4k5 soui-radio-wrapper ceg5x3m soui-radio-wrapper-checked cnsrtqr soui-button-primary c3ct0ht soui-button-button c-ou9rhk soui-button-small"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="cscg4k5 soui-radio-wrapper cg2l11h soui-button-secondary c3ct0ht soui-button-button c-ou9rhk soui-button-small"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="cscg4k5 soui-radio-wrapper cg2l11h soui-button-secondary c3ct0ht soui-button-button c-ou9rhk soui-button-small"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
  <div
    class="c-ddd5kv soui-radio-group cja407n soui-radio-group-button c-p0rt2o soui-button-group"
    style="margin-top: 24px;"
  >
    <button
      class="cscg4k5 soui-radio-wrapper ceg5x3m soui-radio-wrapper-checked cnsrtqr soui-button-primary c3ct0ht soui-button-button"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="cscg4k5 soui-radio-wrapper cg2l11h soui-button-secondary c3ct0ht soui-button-button"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="cscg4k5 soui-radio-wrapper cg2l11h soui-button-secondary c3ct0ht soui-button-button"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
  <div
    class="c-ddd5kv soui-radio-group cja407n soui-radio-group-button c-p0rt2o soui-button-group"
    style="margin-top: 24px;"
  >
    <button
      class="cscg4k5 soui-radio-wrapper ceg5x3m soui-radio-wrapper-checked cnsrtqr soui-button-primary c3ct0ht soui-button-button c-oybn04 soui-button-large"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="cscg4k5 soui-radio-wrapper cg2l11h soui-button-secondary c3ct0ht soui-button-button c-oybn04 soui-button-large"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="cscg4k5 soui-radio-wrapper cg2l11h soui-button-secondary c3ct0ht soui-button-button c-oybn04 soui-button-large"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
</div>
`;

exports[`Radio[Base] should render correctly about status 1`] = `
<div
  class="cscg4k5 soui-radio-wrapper"
>
  <input
    style="display: none;"
    tabindex="0"
    type="radio"
  />
  <span
    class="c-dmr5xa soui-radio-indicator-wrapper"
  >
    <span
      class="co0ikgh soui-radio-indicator"
      tabindex="1"
    />
  </span>
  <span
    class="c-2q2qi9 soui-radio-desc"
  >
    OptionA
  </span>
</div>
`;
